--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 APP_PORT = 3000
 
 MYSQL_HOST = 192.168.3.246
+#MYSQL_HOST = 127.0.0.1
 MYSQL_PORT = 3306
 MYSQL_USER = fcmember
 MYSQL_PWD = fc@62110
